--- a/SampleWebApplication/SampleWebApplication.csproj
+++ b/SampleWebApplication/SampleWebApplication.csproj
@@ -9,7 +9,7 @@
         <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
         <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
       </Content>
-      <Content Update="Views\Company\CompanyAdded.cshtml">
+      <Content Update="wwwroot\js\addNewCompany.js">
         <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
         <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
       </Content>
