Add sqlite usage

--- a/SampleWebApplication/appsettings.json
+++ b/SampleWebApplication/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings" : {
+    "CompanyDatabase": "​data source=companydatabase.db"
+  },
   "AllowedHosts": "*"
 }
