--- a/SampleWebApplication/SampleWebApplication.csproj
+++ b/SampleWebApplication/SampleWebApplication.csproj
@@ -15,4 +15,10 @@
       </Content>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.0" />
+    </ItemGroup>
+
 </Project>
